php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35530 bz2 extension doesn't compile
Submitted: 2005-12-03 14:20 UTC Modified: 2005-12-03 14:23 UTC
From: dolecek at sky dot cz Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.1.1 OS: NetBSD 3.0
Private report: No CVE-ID: None
 [2005-12-03 14:20 UTC] dolecek at sky dot cz
Description:
------------
The bz2 extension doesn't compile when building as an extension using phpize et.al, separately from the main build.

This patch fixes the issue for NetBSD pkgsrc:

--- ext/bz2/bz2_filter.c.orig   2005-11-25 08:40:07.000000000 +0100
+++ ext/bz2/bz2_filter.c        2005-11-25 00:07:50.000000000 +0100
@@ -18,6 +18,10 @@

 /* $Id: bz2_filter.c,v 1.3 2005/08/03 14:06:39 sniper Exp $ */

+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
 #include "php.h"
 #include "php_bz2.h"




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-12-03 14:23 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Aug 16 09:00:02 2026 UTC