- Fix bug #35530 (ext/bz2 compile failure with phpize)